@@ -1,0 +1,18 @@
+version: "2"
+services:
+  app:
+    build: .
+    ports:
+      - "3000:3000"
+    depends_on:
+      - database
+
+  database:
+    image: mongo:focal
+    volumes:
+      - ./data:/data/db
+       environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: mongodb
+    ports:
+      - "27017:27017"
