@@ -10,6 +10,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node .",
+    "deploy": "yarn build && yarn start",
     "typecheck": "tsc --noEmit",
     "dev": "tsnd --ignore node_modules --transpile-only --no-notify --respawn src/server.ts"
   },
@@ -24,7 +25,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.2",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "yarn": "^1.22.17"
   },
   "dependencies": {
     "graphql": "^15.6.1",
