@@ -39,6 +39,7 @@ npm manifest:
     "scripts": {
       "build": "tsc",
       "start": "node .",
+      "deploy": "yarn build && yarn start",
       "typecheck": "tsc --noEmit",
       "dev": "tsnd --ignore node_modules --transpile-only --no-notify --respawn src/server.ts"
     },
@@ -53,7 +54,8 @@ npm manifest:
       "eslint-config-prettier": "^8.3.0",
       "eslint-plugin-import": "^2.25.2",
       "ts-node-dev": "^1.1.8",
-      "typescript": "^4.4.4"
+      "typescript": "^4.4.4",
+      "yarn": "^1.22.17"
     },
     "dependencies": {
       "graphql": "^15.6.1",
@@ -2061,6 +2063,11 @@ Lockfile:
     version "4.0.0"
     resolved "https://registry.yarnpkg.com/yallist/-/yallist-4.0.0.tgz#9bb92790d9c0effec63be73519e11a35019a3a72"
     integrity sha512-3wdGidZyq5PB084XLES5TpOSRA3wjXAlIWMhum2kRcv/41Sn2emQ0dycQW4uZXLejwKvg6EsvbdlVL+FYEct7A==
+  
+  yarn@^1.22.17:
+    version "1.22.17"
+    resolved "https://registry.yarnpkg.com/yarn/-/yarn-1.22.17.tgz#bf910747d22497b573131f7341c0e1d15c74036c"
+    integrity sha512-H0p241BXaH0UN9IeH//RT82tl5PfNraVpSpEoW+ET7lmopNC61eZ+A+IDvU8FM6Go5vx162SncDL8J1ZjRBriQ==
   
   ylru@^1.2.0:
     version "1.2.1"
